@@ -1,3 +1,8 @@
+Mon Jun  6 17:29:35 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* test/ruby/enc/test_case_comprehensive.rb: Speed up testing for small
+	  encodings by preselecting codepoints.
+
 Mon Jun  6 17:10:50 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* ext/openssl/ossl_cipher.c (ossl_cipher_free): Use EVP_CIPHER_CTX_free()
